--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@types/bcrypt": "^5.0.0",
         "@types/compression": "^1.7.2",
+        "@types/cors": "^2.8.13",
         "@types/dotenv": "^8.2.0",
         "@types/express": "^4.17.17",
         "@types/helmet": "^4.0.0",
@@ -24,6 +25,7 @@
         "@types/uuid": "^9.0.1",
         "bcrypt": "^5.1.0",
         "compression": "^1.7.4",
+        "cors": "^2.8.5",
         "dotenv": "^16.0.3",
         "express": "^4.18.2",
         "helmet": "^6.0.1",
